css/style.css
/******************************************************************************/
/**************************** Variables definition ****************************/
/******************************************************************************/
:root{
    /* Background variables */
    --bg-body: #000000;
    --bg-footer: #212021;
    --bg-btn-end-call: #424242;
    --bg-btn-top-tags: #333333;
    /* Text colors variables */
    --txt-body: #ffffff;
    --txt-footer: #ffffff;
    --txt-btn-end-call: #ff0000;
    --txt-btn-top-tags: #ffffff;
    --txt-btn-share: #43a806;
    --txt-btn-share-hover: #008000;
    --txt-btn-hover: #d9d9d9;
    /* Size variables */
    --body-font-size: 0.9rem;
    --main-padding-top: 80px;
    --main-padding-right: 90px;
    --main-padding-left: 90px;
    --main-padding-bottom: 50px;
    --cams-gap-column: 5px;
    --cams-gap-row: 15px;
    --footer-height: 80px;
    /* Utility variables */
    --number-columns: 7;
    --number-rows: 5;
}

/***************************************************************/
/**************************** Reset ****************************/
/***************************************************************/
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/*****************************************************************/
/**************************** General ****************************/
/*****************************************************************/
body{
    font-family: 'Helvetica','Arial'!important;
    font-size: var(--body-font-size);
}
.pos-angle-bottom-left{
    position: absolute;
    bottom: 0;
    left: 0;
}

/*****************************************************************/
/**************************** Flexbox ****************************/
/*****************************************************************/
.d-flex{
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    align-content: center;
}
.row-align-center{
    align-items: center;
}
.row-content-center{
    justify-content: center;
}
.col-gap{
    column-gap: var(--cams-gap-column);
}
.row-gap{
    row-gap: var(--cams-gap-row);
}

/*****************************************************************/
/****************************** Main *****************************/
/*****************************************************************/
main{
    width: 100%;
    height: calc(100vh - var(--footer-height));
    background-color: var(--bg-body);
    color: var(--txt-body);
    position: relative;
    padding: var(--main-padding-top) var(--main-padding-right) 
    var(--main-padding-bottom) var(--main-padding-left);
}
.camsContainer{
    width: 100%;
    height: 80vh;
    background-color: yellow;
}

/*****************************************************************/
/****************************** Cam ******************************/
/*****************************************************************/
.camsContainer .cam{
    position: relative;
    width: calc(100% / var(--number-columns));
    height: calc(100% / var(--number-rows));
    background-image: url(https://picsum.photos/300/200);
    background-size: cover;
}
.camsContainer .cam .username{
    background-color: rgba(0, 0, 0, 0.4);
    padding: 10px 5px;
    text-transform: capitalize;
    text-align: center;
}

/*****************************************************************/
/***************************** Footer ****************************/
/*****************************************************************/
footer{
    width: 100%;
    height: var(--footer-height);
    background-color: var(--bg-footer);
    color: var(--txt-footer);
}

